Updated Arabic Translation by Djihed Afifi.
svn path=/trunk/; revision=415

--- a/po/ar.po
+++ b/po/ar.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Arabic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-23 12:22+0000\n"
+"POT-Creation-Date: 2008-01-31 08:07+0000\n"
 "PO-Revision-Date: 2008-01-12 20:52+0100\n"
 "Last-Translator: Djihed Afifi <djihed@gmail.com>\n"
 "Language-Team: Arabeyes <doc@arabeyes.org>\n"
@@ -43,8 +43,7 @@ msgstr "أغلق"
 msgid "Close this dock"
 msgstr "أغلق هذا الحوض"
 
-#: ../gdl/gdl-dock-item-grip.c:684
-#: ../gdl/gdl-dock-tablabel.c:128
+#: ../gdl/gdl-dock-item-grip.c:684 ../gdl/gdl-dock-tablabel.c:128
 #, fuzzy
 msgid "Controlling dock item"
 msgstr "سِمة التحكّم"
@@ -74,16 +73,18 @@ msgid "Item behavior"
 msgstr "سلوك العنصر"
 
 #: ../gdl/gdl-dock-item.c:268
-msgid "General behavior for the dock item (i.e. whether it can float, if it's locked, etc.)"
+msgid ""
+"General behavior for the dock item (i.e. whether it can float, if it's "
+"locked, etc.)"
 msgstr ""
 
-#: ../gdl/gdl-dock-item.c:276
-#: ../gdl/gdl-dock-master.c:145
+#: ../gdl/gdl-dock-item.c:276 ../gdl/gdl-dock-master.c:145
 msgid "Locked"
 msgstr "مقفل"
 
 #: ../gdl/gdl-dock-item.c:277
-msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgid ""
+"If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr ""
 
 #: ../gdl/gdl-dock-item.c:285
@@ -104,42 +105,44 @@ msgstr "الإرتفاع المفضّل لعنصر الحوض"
 
 #: ../gdl/gdl-dock-item.c:543
 #, c-format
-msgid "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or some other compound dock object."
+msgid ""
+"You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
+"some other compound dock object."
 msgstr ""
 
 #: ../gdl/gdl-dock-item.c:550
 #, c-format
-msgid "Attempting to add a widget with type %s to a %s, but it can only contain one widget at a time; it already contains a widget of type %s"
+msgid ""
+"Attempting to add a widget with type %s to a %s, but it can only contain one "
+"widget at a time; it already contains a widget of type %s"
 msgstr ""
 
-#: ../gdl/gdl-dock-item.c:1235
-#: ../gdl/gdl-dock-item.c:1285
+#: ../gdl/gdl-dock-item.c:1236 ../gdl/gdl-dock-item.c:1286
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
 msgstr ""
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1389
+#: ../gdl/gdl-dock-item.c:1390
 msgid "UnLock"
 msgstr "إلغِ القفل"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1396
+#: ../gdl/gdl-dock-item.c:1397
 msgid "Hide"
 msgstr "إخفاء"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1401
+#: ../gdl/gdl-dock-item.c:1402
 msgid "Lock"
 msgstr "اقفل"
 
-#: ../gdl/gdl-dock-item.c:1607
+#: ../gdl/gdl-dock-item.c:1608
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr ""
 
-#: ../gdl/gdl-dock-layout.c:123
-#: ../gdl/gdl-dock-bar.c:108
+#: ../gdl/gdl-dock-layout.c:123 ../gdl/gdl-dock-bar.c:108
 msgid "Master"
 msgstr "رئيس"
 
@@ -171,32 +174,30 @@ msgstr "مرئي"
 msgid "Item"
 msgstr "عنصر"
 
-#: ../gdl/gdl-dock-layout.c:708
-#: ../gdl/gdl-dock-object.c:119
+#: ../gdl/gdl-dock-layout.c:708 ../gdl/gdl-dock-object.c:119
 msgid "Name"
 msgstr "إسم"
 
-#: ../gdl/gdl-dock-layout.c:741
-#: ../gdl/layout.glade.h:1
+#: ../gdl/gdl-dock-layout.c:741 ../gdl/layout.glade.h:1
 msgid "Dock items"
 msgstr "عناصر الحوض"
 
-#: ../gdl/gdl-dock-layout.c:747
-#: ../gdl/layout.glade.h:3
+#: ../gdl/gdl-dock-layout.c:747 ../gdl/layout.glade.h:3
 msgid "Saved layouts"
 msgstr "التصاميم المحفوظة"
 
 #: ../gdl/gdl-dock-layout.c:789
 #, c-format
-msgid "While loading layout: don't know how to create a dock object whose nick is '%s'"
+msgid ""
+"While loading layout: don't know how to create a dock object whose nick is '%"
+"s'"
 msgstr ""
 
 #: ../gdl/gdl-dock-layout.c:1268
 msgid "Layout managment"
 msgstr "إدارة التصميم"
 
-#: ../gdl/gdl-dock-master.c:138
-#: ../gdl/gdl-dock.c:186
+#: ../gdl/gdl-dock-master.c:138 ../gdl/gdl-dock.c:186
 msgid "Default title"
 msgstr "العنوان الإفتراضي"
 
@@ -205,27 +206,31 @@ msgid "Default title for newly created floating docks"
 msgstr "العنوان الافتراضي للأحواض الطافية الجديدة"
 
 #: ../gdl/gdl-dock-master.c:146
-msgid "If is set to 1, all the dock items bound to the master are locked; if it's 0, all are unlocked; -1 indicates inconsistency among the items"
+msgid ""
+"If is set to 1, all the dock items bound to the master are locked; if it's "
+"0, all are unlocked; -1 indicates inconsistency among the items"
 msgstr ""
 
-#: ../gdl/gdl-dock-master.c:154
-#: ../gdl/gdl-switcher.c:706
+#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:704
 msgid "Switcher Style"
 msgstr "اسلوب التبديل"
 
-#: ../gdl/gdl-dock-master.c:155
-#: ../gdl/gdl-switcher.c:707
+#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:705
 msgid "Switcher buttons style"
 msgstr "أسلوب زر المبدّل"
 
 #: ../gdl/gdl-dock-master.c:761
 #, c-format
-msgid "master %p: unable to add object %p[%s] to the hash.  There already is an item with that name (%p)."
+msgid ""
+"master %p: unable to add object %p[%s] to the hash.  There already is an "
+"item with that name (%p)."
 msgstr ""
 
 #: ../gdl/gdl-dock-master.c:934
 #, c-format
-msgid "The new dock controller %p is automatic.  Only manual dock objects should be named controller."
+msgid ""
+"The new dock controller %p is automatic.  Only manual dock objects should be "
+"named controller."
 msgstr ""
 
 #: ../gdl/gdl-dock-notebook.c:134
@@ -270,12 +275,16 @@ msgstr ""
 
 #: ../gdl/gdl-dock-object.c:444
 #, c-format
-msgid "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which hasn't implemented this method"
+msgid ""
+"Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
+"hasn't implemented this method"
 msgstr ""
 
 #: ../gdl/gdl-dock-object.c:576
 #, c-format
-msgid "Dock operation requested in a non-bound object %p. The application might crash"
+msgid ""
+"Dock operation requested in a non-bound object %p. The application might "
+"crash"
 msgstr ""
 
 #: ../gdl/gdl-dock-object.c:583
@@ -285,7 +294,8 @@ msgstr ""
 
 #: ../gdl/gdl-dock-object.c:625
 #, c-format
-msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgid ""
+"Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
 
 #: ../gdl/gdl-dock-paned.c:132
@@ -302,7 +312,9 @@ msgid "Sticky"
 msgstr "لاصق"
 
 #: ../gdl/gdl-dock-placeholder.c:144
-msgid "Whether the placeholder will stick to its host or move up the hierarchy when the host is redocked"
+msgid ""
+"Whether the placeholder will stick to its host or move up the hierarchy when "
+"the host is redocked"
 msgstr ""
 
 #: ../gdl/gdl-dock-placeholder.c:151
@@ -319,11 +331,12 @@ msgid "Next placement"
 msgstr "_البديل"
 
 #: ../gdl/gdl-dock-placeholder.c:160
-msgid "The position an item will be docked to our host if a request is made to dock to us"
+msgid ""
+"The position an item will be docked to our host if a request is made to dock "
+"to us"
 msgstr ""
 
-#: ../gdl/gdl-dock-placeholder.c:169
-#: ../gdl/gdl-dock.c:193
+#: ../gdl/gdl-dock-placeholder.c:169 ../gdl/gdl-dock.c:193
 msgid "Width"
 msgstr "العرض"
 
@@ -331,8 +344,7 @@ msgstr "العرض"
 msgid "Width for the widget when it's attached to the placeholder"
 msgstr ""
 
-#: ../gdl/gdl-dock-placeholder.c:177
-#: ../gdl/gdl-dock.c:201
+#: ../gdl/gdl-dock-placeholder.c:177 ../gdl/gdl-dock.c:201
 msgid "Height"
 msgstr "ارتفاع"
 
@@ -355,8 +367,9 @@ msgid "X-Coordinate"
 msgstr "إحداثية"
 
 #: ../gdl/gdl-dock-placeholder.c:192
-msgid "X-Coordinate fow dock when floating"
-msgstr ""
+#, fuzzy
+msgid "X-Coordinate for dock when floating"
+msgstr "إحداثي الشريط السيني"
 
 #: ../gdl/gdl-dock-placeholder.c:198
 #, fuzzy
@@ -364,8 +377,9 @@ msgid "Y-Coordinate"
 msgstr "إحداثية"
 
 #: ../gdl/gdl-dock-placeholder.c:199
-msgid "Y-Coordinate fow dock when floating"
-msgstr ""
+#, fuzzy
+msgid "Y-Coordinate for dock when floating"
+msgstr "إحداثي الشريط الصادي"
 
 #: ../gdl/gdl-dock-placeholder.c:494
 msgid "Attempt to dock a dock object to an unbound placeholder"
@@ -378,7 +392,9 @@ msgstr ""
 
 #: ../gdl/gdl-dock-placeholder.c:643
 #, c-format
-msgid "Something weird happened while getting the child placement for %p from parent %p"
+msgid ""
+"Something weird happened while getting the child placement for %p from "
+"parent %p"
 msgstr ""
 
 #: ../gdl/gdl-dock-tablabel.c:129
@@ -445,8 +461,7 @@ msgstr "إحداثي الشريط الصادي"
 msgid "Dock #%d"
 msgstr "حوض #%d"
 
-#: ../gdl/gdl-icons.c:134
-#: ../gdl/gdl-icons.c:135
+#: ../gdl/gdl-icons.c:134 ../gdl/gdl-icons.c:135
 msgid "Icon size"
 msgstr "حجم الأيقونة"
 
@@ -461,4 +476,3 @@ msgstr "_حمل"
 #: ../gdl/layout.glade.h:5
 msgid "_Lock dock items"
 msgstr "أ_قفل عناصر الحوض"
-
