Added Turkish translation
svn path=/trunk/; revision=416

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-31	Baris Cicek <baris@teamforce.name.tr>
+	
+	* tr.po: Added Turkish translation
+	* LINGUAS: Added tr (Turkish)
+
 2008-01-31  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
