--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-01  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2008-01-31	Baris Cicek <baris@teamforce.name.tr>
 	
 	* tr.po: Added Turkish translation
