--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-3  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Abou Manal.
+
 2008-02-01  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
