--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-04  Johannes Schmid <jhs@gnome.org>
+
+	Patch from Og Maciel <ogmaciel@gnome.org>:
+	* gdl/gdl-dock-item.c: (gdl_dock_item_class_init):
+	Fixed documentation of property (#514116)
+
 === gdl 0.7.8 ===
 
 2008-01-28  Naba Kumar  <naba@gnome.org>
