--- a/po/eu.po
+++ b/po/eu.po
@@ -1,14 +1,14 @@
-# translation of gdl.HEAD.po to Basque
+# translation of eu.po to Basque
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: gdl.HEAD\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-18 18:00+0100\n"
-"PO-Revision-Date: 2008-01-18 18:02+0100\n"
+"POT-Creation-Date: 2008-02-08 17:44+0100\n"
+"PO-Revision-Date: 2008-02-08 17:44+0100\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -62,10 +62,10 @@ msgid "Resizable"
 msgstr "Tamainaz alda daiteke"
 
 #: ../gdl/gdl-dock-item.c:260
-msgid "If set, the dock item can be resized when docked in a paned"
+msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
 msgstr ""
-"Ezartzen bada, elementu atrakagarria tamainaz alda daiteke panel batean "
-"atrakatzean"
+"Ezartzen bada, elementu atrakagarria tamainaz alda daiteke GtkPanel trepeta "
+"batean atrakatzean"
 
 #: ../gdl/gdl-dock-item.c:267
 msgid "Item behavior"
@@ -84,8 +84,7 @@ msgid "Locked"
 msgstr "Blokeatuta"
 
 #: ../gdl/gdl-dock-item.c:277
-msgid ""
-"If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
 msgstr ""
 "Ezartzen bada, elementu atrakagarria ezin izango da lekuz aldatu, eta ez du "
 "heldu-lekurik erakutsiko"
@@ -124,28 +123,27 @@ msgstr ""
 "%s motako trepeta bat %s(r)i gehitzea saiatu da, baina aldi berean trepeta "
 "bakarra eduki dezake, eta jadanik badu %s motako trepeta"
 
-#: ../gdl/gdl-dock-item.c:1235 ../gdl/gdl-dock-item.c:1285
+#: ../gdl/gdl-dock-item.c:1236 ../gdl/gdl-dock-item.c:1286
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
-msgstr ""
-"Onartu gabeko %s atrakatzeko estrategia %s motako objektu atrakagarrian"
+msgstr "Onartu gabeko %s atrakatzeko estrategia %s motako objektu atrakagarrian"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1389
+#: ../gdl/gdl-dock-item.c:1390
 msgid "UnLock"
 msgstr "Desblokeatu"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1396
+#: ../gdl/gdl-dock-item.c:1397
 msgid "Hide"
 msgstr "Ezkutatu"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1401
+#: ../gdl/gdl-dock-item.c:1402
 msgid "Lock"
 msgstr "Blokeatu"
 
-#: ../gdl/gdl-dock-item.c:1607
+#: ../gdl/gdl-dock-item.c:1608
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr "Lotu ezin daitekeen %p elementu bat lotzea saiatu da"
@@ -164,8 +162,7 @@ msgstr "Zikina"
 
 #: ../gdl/gdl-dock-layout.c:132
 msgid "True if the layouts have changed and need to be saved to a file"
-msgstr ""
-"Egia diseinuak aldatu egin badira eta fitxategi batean gorde behar bada"
+msgstr "Egia diseinuak aldatu egin badira eta fitxategi batean gorde behar bada"
 
 #. FIXME: pop up an error dialog
 #: ../gdl/gdl-dock-layout.c:563
@@ -226,11 +223,11 @@ msgstr ""
 "adierazten da. -1 balioarekin berriz, elementuen arteko kontraesanak daudela "
 "adierazten da."
 
-#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:706
+#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:704
 msgid "Switcher Style"
 msgstr "Aldatzailearen estiloa"
 
-#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:707
+#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:705
 msgid "Switcher buttons style"
 msgstr "Aldatzailearen botoien estiloa"
 
@@ -313,8 +310,7 @@ msgstr "Ezin da %p %p(e)n atrakatu, maisu desberdinenak direlako"
 
 #: ../gdl/gdl-dock-object.c:625
 #, c-format
-msgid ""
-"Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
 "Jadanik lotuta dagoen %2$p objektu atrakagarri bati %1$p lotzea saiatu da "
 "(uneko maisua: %3$p)"
@@ -401,8 +397,7 @@ msgstr "Atrakagarri mugikorraren Y koordenatua"
 
 #: ../gdl/gdl-dock-placeholder.c:494
 msgid "Attempt to dock a dock object to an unbound placeholder"
-msgstr ""
-"Objektu atrakagarri bat lotu ezin daitekeen leku-markari lotzea saiatu da"
+msgstr "Objektu atrakagarri bat lotu ezin daitekeen leku-markari lotzea saiatu da"
 
 #: ../gdl/gdl-dock-placeholder.c:618
 #, c-format
@@ -490,3 +485,4 @@ msgstr "_Kargatu"
 #: ../gdl/layout.glade.h:5
 msgid "_Lock dock items"
 msgstr "_Blokeatu elementu atrakagarriak"
+
