--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 0.7.9
+
+* Added gtk-doc documentation (12% coverage)
+* Fixed documentation of property (#514116)
+* Translation updates: ar, tr, pt, es, gl, eu, sv
+
 Changes in 0.7.8
 
 * Disable deprecated flags completely until #457562 is fixed
