Used sensible gtk-doc version requirement.
	* configure.in: Used sensible gtk-doc version requirement.


svn path=/trunk/; revision=428

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 === gdl 0.7.9 ===
 
+2008-02-11  Naba Kumar  <naba@gnome.org>
+
+	* configure.in: Used smaller gtk-doc version requirement.
+
 2008-02-11  Johannes Schmid <jhs@gnome.org>
 
 	* NEWS:
