--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-12  Danishka Navin  <danishka@gmail.com>
+
+	* si.po: Updated Sinhala translation.
+
 2008-01-24  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
